--- a/client/src/style.css
+++ b/client/src/style.css
@@ -78,11 +78,31 @@ body {
 
 .modal-wrapper {
   z-index: 1000;
-  background-color: rgba(105, 41, 41, 0.507);
+  background-color: rgba(255, 255, 255, 0.85);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
 
+
+.modal-body {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  max-height:80%;
+
+}
+
+.modal-style {
+  background-color: rgb(121, 120, 120);
+  color: rgb(0, 0, 0);
+}
+
+.dropdown > button {
+  width: 100%
 }
