--- a/client/src/style.css
+++ b/client/src/style.css
@@ -78,7 +78,7 @@ body {
 
 .modal-wrapper {
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(0, 0, 0, 0.75);
   position: fixed;
   top: 0;
   left: 0;
@@ -95,11 +95,12 @@ body {
   top: 50%;
   transform: translateY(-50%);
   max-height:80%;
+  min-height: 50%;
   overflow: auto;
 }
 
 .modal-style {
-  background-color: rgb(121, 120, 120);
+  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   
 }
