--- a/client/src/style.css
+++ b/client/src/style.css
@@ -108,3 +108,19 @@ body {
 .dropdown > button {
   width: 100%
 }
+
+/* form */
+.input-err {
+  border: 1px solid var(--color-error);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-size: 1.2em 1.2em;
+  background-position: right 0.5em center;
+  padding-right: 1.6rem;
+
+}
+
+.err-msg {
+  color: var(--color-error);
+  font-size: 0.8rem;
+}
