--- a/client/src/style.css
+++ b/client/src/style.css
@@ -76,33 +76,31 @@ body {
 }
 
 
-.modal-wrapper {
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.75);
+.modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+  background-color: rgb(0, 0, 0, 0.7);
+  align-items: center;
+  z-index: 1500;
 }
 
 
 .modal-body {
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
   max-height:80%;
   min-height: 50%;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border-radius: 1rem;
+  padding: 4rem 3rem 4rem 3rem;
   overflow: auto;
 }
 
 .modal-style {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  
+
 }
 
 .dropdown > button {
