--- a/client/src/style.css
+++ b/client/src/style.css
@@ -18,6 +18,11 @@ body {
   cursor: pointer;
 }
 
+.tooltip-icon {
+  color: gray;
+  padding-left: 0.2rem;
+  cursor: help;
+}
 
 .part-panel {
   border-style: solid none solid none;
