--- a/client/src/style.css
+++ b/client/src/style.css
@@ -47,7 +47,8 @@ body {
 
 .part-detail {
   border: 1px rgb(209, 209, 209) solid;
-  border-radius: 0.3rem;
+  border-radius: 0.2rem;
+  padding: 1rem;
 }
 
 .text-detail {
