--- a/client/src/style.css
+++ b/client/src/style.css
@@ -213,3 +213,10 @@ button:focus {
   color: var(--color-error);
   font-size: 0.8rem;
 }
+
+/* Amplify UI */
+
+.Button__button___vS7Mv, .Button__button___vS7Mv:active {
+  background-color: rgb(187, 190, 3);
+  color: black;
+}
