--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,6 +15,13 @@ body {
   background-color: rgb(var(--modal-bg-col));
 }
 
+a {
+  color: rgb(255, 123, 0);
+}
+a:hover {
+  color: var(--ion-color-primary-tint);
+}
+
 .pointer {
   cursor: pointer;
 }
