--- a/client/src/style.css
+++ b/client/src/style.css
@@ -82,9 +82,12 @@ a:hover {
   margin-left: auto;
 }
 
-
-.outline-grey {
-  outline: 1px solid rgb(233, 233, 233);
+.no-data {
+  background-color: white;
+  border: 2px solid grey;
+  border-radius: 2rem;
+  margin: 2rem 0rem 2rem 0rem;
+  padding: 2rem;
 }
 
 /* buttons and dropdowns */
@@ -184,7 +187,7 @@ button:focus {
 }
 
 .navbar {
-  background-color: rgba(var(--theme), 0.9);
+  background-color: rgba(var(--theme), 0.95);
 }
 
 .bg-theme {
