--- a/client/src/style.css
+++ b/client/src/style.css
@@ -76,7 +76,6 @@ a:hover {
 
 .text-detail {
   font-size: 0.9em;
-  /* padding-left: 2rem; */
 }
 
 .controls-wrapper {
@@ -171,12 +170,9 @@ button:focus {
 .modal-body {
   position: absolute;
   max-height:90%;
-  background-color: rgb(var(--modal-bg-col));
-  color: rgb(0, 0, 0);
-  border-radius: 1rem;
-  padding: 3rem 3rem 4rem 3rem;
   overflow: auto;
 }
+
 
 .modal-title {
   font-size: 2.3rem;
@@ -185,6 +181,17 @@ button:focus {
   padding: 1rem;
   border-radius:1rem;
   margin-top: 1rem;
+}
+
+.bbb-container {
+  padding: 3rem 3rem 4rem 3rem;
+  background-color: rgb(var(--modal-bg-col));
+  color: rgb(0, 0, 0);
+  border-radius: 1rem;
+}
+
+.bbb-border {
+  border: 1px var(--secondary) solid;
 }
 
 .scroll-more {
@@ -258,4 +265,13 @@ button:focus {
 .Button__button___vS7Mv, .Button__button___vS7Mv:active {
   background-color: rgb(var(--theme)) !important;
   color: black;
+}
+
+.Toast__toast___XXr3v { 
+  /* default error box */
+  display: none;
+}
+
+a.Anchor__a___1_Iz8 {
+  text-decoration: underline;
 }
